Fix line spacing for gists

--- a/source/css/_partial/highlight.styl
+++ b/source/css/_partial/highlight.styl
@@ -91,6 +91,13 @@ table.lines {
 width:100%;
 }
 
+.gist pre,
+.gist code {
+font: inherit !important;
+line-height:inherit !important;
+white-space: pre;
+}
+
 .gist div {
 margin:0;
 padding:0;
